# discrete-rods

./: .gitignore  CMakeLists.txt  README.md
resources/: resources.txt  scratch.txt
src/: MathUtilities.h  MatrixProperty.cpp  MatrixProperty.h  Rod.cpp  Rod.h  Rod2.cpp  Rod2.h  Simulator.cpp  Simulator.h  VectorProperty.cpp  VectorProperty.h  main.cpp
